--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.jacobgreenland.finalproject"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -33,7 +33,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
 
-
     compile 'com.intuit.sdp:sdp-android:1.0.2'
 
     compile 'io.reactivex:rxandroid:1.0.1'
@@ -53,6 +52,10 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
+    compile 'com.github.pwittchen:reactivenetwork:0.4.0'
+    compile 'com.android.support:customtabs:23.4.0'
+    compile 'com.google.android.gms:play-services:9.0.1'
 }
 repositories {
     mavenCentral()
