--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 
@@ -56,12 +66,23 @@ dependencies {
     compile 'com.github.pwittchen:reactivenetwork:0.4.0'
     compile 'com.android.support:customtabs:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.1'
+
+    compile 'com.github.doctoror.geocoder:library:1.0.0'
+    compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
+    compile 'org.sufficientlysecure:donations:2.4'
+    compile 'net.danlew:android.joda:2.9.4.1'
+    compile('com.twitter.sdk.android:twitter:1.14.1@aar') {
+        transitive = true;
+    }
+
 }
 repositories {
     mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
